# physical-ai-textbook-new

backend/: Dockerfile  package.json  pyproject.toml  requirements.txt  run_backend.bat
backend/src/: doc_processor.py  main.py  models.py  rag_service.py  vector_store.py
backend/tests/: test_rag_accuracy.py
backend/tests/integration/: test_main.py
backend/tests/unit/: test_rag_comprehensive.py  test_rag_service.py  test_vector_store.py
frontend/src/components/: RAGChatbot.css  RAGChatbot.js
specs/001-physical-ai-book/: tasks.md
website/: docusaurus.config.ts
website/src/components/: ChatbotInjector.jsx  Root.tsx
website/src/components/ChatbotWidget/: ChatbotWidget.css  ChatbotWidget.jsx
website/src/components/HomepageFeatures/: index.tsx
website/src/pages/: ChatbotLayout.js  index.tsx
