[tool.poetry]
name = "physical-ai-course-backend"
version = "1.0.0"
description = "Backend for the Physical AI & Humanoid Robotics Course RAG Chatbot"
authors = ["Course Team <team@physicalai.course>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
openai = "^1.3.5"
qdrant-client = "^1.7.0"
python-dotenv = "^1.0.0"
torch = "^2.1.1"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
asyncio = "^3.4.3"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.1"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"
dev = "uvicorn src.main:app --reload --port 8000"